fix: apt resource matchs repositories not packages
Obvious fix.

Signed-off-by: nqb <nqb+git@azyx.fr>

--- a/docs/resources/apt.md.erb
+++ b/docs/resources/apt.md.erb
@@ -70,12 +70,12 @@ For a full list of available matchers, please visit our [matchers page](https://
 
 ### be_enabled
 
-The `be_enabled` matcher tests if a package exists in the repository:
+The `be_enabled` matcher tests if a repository is enabled on the system:
 
     it { should be_enabled }
 
 ### exist
 
-The `exist` matcher tests if a package exists on the system:
+The `exist` matcher tests if a repository exists on the system:
 
     it { should exist }
