Update resource registry_key documentation example
ref: https://github.com/inspec/inspec/issues/4003

Signed-off-by: Miah Johnson <miah@chia-pet.org>

--- a/docs/resources/registry_key.md.erb
+++ b/docs/resources/registry_key.md.erb
@@ -31,7 +31,7 @@ Use a registry key name and path:
 
 Use only a registry key path:
 
-    describe registry_key('Task Scheduler','HKEY_LOCAL_MACHINE\SYSTEM\CurrentControlSet\services\Schedule') do
+    describe registry_key('HKEY_LOCAL_MACHINE\SYSTEM\CurrentControlSet\services\Schedule') do
       its('Start') { should eq 2 }
     end
 
