--- a/www/source/index.html.slim
+++ b/www/source/index.html.slim
@@ -38,7 +38,7 @@ header.bg-gradient.margin-top-offset.short-bg.relative
             p Laying the foundation for opt-in telemetry
             p Support for the new Chef License
             p Add support for more_permissive_than? on the File resource
-            p many other minor bugfixes!
+            p Many other minor bugfixes!
         .margin-top-sm.brdr-left.large-11.medium-11
           .margin-left-sm
             h4.t-purple inspec-bin
