--- a/www/source/index.html.slim
+++ b/www/source/index.html.slim
@@ -42,7 +42,7 @@ header.bg-gradient.margin-top-offset.short-bg.relative
         .margin-top-sm.brdr-left.large-11.medium-11
           .margin-left-sm
             h4.t-purple inspec-bin
-            p Moved the `inspec` executable to a separate gem, `inspec-bin`.  This allows use of the `inspec` gem as a library without the licensing restrictions placed on the executable.
+            p Moved the `inspec` executable to a separate gem, `inspec-bin`. This allows the use of the `inspec` gem as a library without the licensing restrictions placed on the executable.
             p This release is the first to require accepting a license before using it as an executable.
       .margin-top-xs
         a#expandBtn Show all new features
