Include info about Chef License Requirements
Signed-off-by: Mary Jinglewski <mjinglewski@chef.io>

--- a/www/source/docs/index.html.slim
+++ b/www/source/docs/index.html.slim
@@ -1,7 +1,10 @@
 h2 Chef InSpec Documentation
 p
   | Chef InSpec is a free and open-source framework for testing and auditing your applications and infrastructure. Chef InSpec works by comparing the actual state of your system with the desired state that you express in easy-to-read and easy-to-write Chef InSpec code. Chef InSpec detects violations and displays findings in the form of a report, but puts you in control of remediation.
-
+p
+  | Note: Versions of Chef InSpec 4.0 and later require accepting the EULA to use. Please visit the 
+  a href="https://docs.chef.io/chef_license_accept.html" license acceptance page
+  ' on the Chef docs site for more information.
 h2.margin-top-sm Getting started with Chef InSpec
 p
   ' Below are some of the core concepts that make up Chef InSpec. Check out our
