Update gem install instructions on website downloads page
Signed-off-by: Clinton Wolfe <clintoncwolfe@gmail.com>

--- a/www/source/downloads.html.slim
+++ b/www/source/downloads.html.slim
@@ -70,12 +70,12 @@ header.bg-gradient.margin-top-offset.short-bg.relative
             ' Chef InSpec is included in the
             a href="https://downloads.chef.io/chefdk" ChefDK
             '  and is available as a standalone
-            a href="https://rubygems.org/gems/inspec" Ruby gem
+            a href="https://rubygems.org/gems/inspec-bin" Ruby gem
             ' .
           .pad-under-xs
             .box-code.shadow.box-code-overwrite.margin-top-xs
              i#copy.fa.fa-copy.copy.t-purple.mobile-hide onclick="copyToClipboard('#ruby-users-install')"
-             code#ruby-users-install gem install inspec
+             code#ruby-users-install gem install inspec-bin
         .triangle-right
 
 
