Update apache resource sunset notice
Signed-off-by: Clinton Wolfe <clintoncwolfe@gmail.com>

--- a/docs/resources/apache.md.erb
+++ b/docs/resources/apache.md.erb
@@ -5,9 +5,9 @@ platform: linux
 
 # apache
 
-Use the `apache` Chef InSpec audit resource to test the state of the Apache server on Linux/Unix systems.
+<p class="warning">This resource is deprecated and should not be used. It was removed in Chef InSpec 4.0.  The documentation below is preserved as a reference. Replacement functionality is available in the [apache_conf](apache_conf/) resource.</p>
 
-<p class="warning">This resource is deprecated and should not be used. It will be removed in Chef InSpec 3.0.</p>
+Use the `apache` Chef InSpec audit resource to test the state of the Apache server on Linux/Unix systems.
 
 <br>
 
@@ -15,11 +15,11 @@ Use the `apache` Chef InSpec audit resource to test the state of the Apache serv
 
 ### Installation
 
-This resource is distributed along with Chef InSpec itself. You can use it automatically.
+This resource was distributed along with Chef InSpec itself.
 
 ### Version
 
-This resource first became available in v1.51.15 of InSpec.
+This resource first became available in v1.51.15 of InSpec and was removed in version 4.0.
 
 ## Syntax
 
