--- a/docs/resources/apache.md.erb
+++ b/docs/resources/apache.md.erb
@@ -5,7 +5,7 @@ platform: linux
 
 # apache
 
-<p class="warning">This resource is deprecated and should not be used. It was removed in Chef InSpec 4.0.  The documentation below is preserved as a reference. Replacement functionality is available in the [apache_conf](apache_conf/) resource.</p>
+<p class="warning">This resource is deprecated and should not be used. It was removed in Chef InSpec 4.0.  The documentation below is preserved as a reference. Replacement functionality is available in the `apache_conf` resource.</p>
 
 Use the `apache` Chef InSpec audit resource to test the state of the Apache server on Linux/Unix systems.
 
