use semi-realistic examples
Signed-off-by: Eike Waldt <waldt@b1-systems.de>

--- a/docs/resources/sys_info.md.erb
+++ b/docs/resources/sys_info.md.erb
@@ -55,10 +55,10 @@ The `hostname` matcher tests the host for which standard output is returned:
 
 The `manufacturer` matcher tests the host for which standard output is returned:
 
-    its('manufacturer') { should eq 'value' }
+    its('manufacturer') { should eq 'ACME Corp.' }
 
 ### model
 
 The `model` matcher tests the host for which standard output is returned:
 
-    its('model') { should eq 'value' }
+    its('model') { should eq 'Flux Capacitor' }
