changed legal refs to point to chef.io proper
Signed-off-by: Keka Ichinose <rikoomi@hotmail.com>

--- a/www/source/layouts/_footer.slim
+++ b/www/source/layouts/_footer.slim
@@ -24,13 +24,13 @@ footer#main-footer.dark-bg
     .columns.large-8.medium-8
       ul.footer--links.strict-right
         li
-          a.link.footer--link href="/legal/licensing" Licensing
+          a.link.footer--link href="https://docs.chef.io/chef_license.html" Licensing
         li
-          a.link.footer--link href="/legal/terms-and-conditions" Terms &amp; Conditions
+          a.link.footer--link href="https://www.chef.io/terms-of-service/" Terms &amp; Conditions
         li
-          a.link.footer--link href="/legal/trademark-policy" Trademark Policy
+          a.link.footer--link href="https://www.chef.io/trademark-policy/" Trademark Policy
         li
-          a.link.footer--link href="/legal/privacy-policy" Privacy Policy
+          a.link.footer--link href="https://www.chef.io/privacy-policy/" Privacy Policy
         li
           a.link.footer--link href="https://www.chef.io/cookie-policy/" Cookie Policy
 
