Add path example to docs
Signed-off-by: David Gasper <dmgasper@osuosl.org>

--- a/docs/resources/postfix_conf.md.erb
+++ b/docs/resources/postfix_conf.md.erb
@@ -38,7 +38,7 @@ When using `postfix_conf` with a custom configuration directory, the following s
 
 where
 
-* `'path'` is the path to your Postfix configuration
+* `'path'` is the path to your Postfix configuration (ex. '/etc/my/postfix/path/main.cf')
 
 <br>
 
