change announcement to LCR Road Trip
Signed-off-by: Shaun Yap <sy@Shauns-MacBook-Pro.local>

--- a/www/source/index.html.slim
+++ b/www/source/index.html.slim
@@ -27,25 +27,11 @@ header.bg-gradient.margin-top-offset.short-bg.relative
   /! announcement
   .row.columns
     .box-white.shadow.z-20.slide-left
-      h3.large-11.medium-11 Announcing InSpec 4
-      p.large-11.medium-11 Inputs system overhaul, updated AWS-SDK to v3, support for the new Chef License, and many bugfixes and minor features
-      #expand
-        .margin-top-sm.brdr-left.large-11.medium-11
-          .margin-left-sm
-            h4.t-purple core
-            p Inputs system overhaul - more consistent, extensible, and predictable
-            p Updated AWS-SDK to v3
-            p Laying the foundation for opt-in telemetry
-            p Support for the new Chef License
-            p Add support for more_permissive_than? on the File resource
-            p Many other minor bugfixes!
-        .margin-top-sm.brdr-left.large-11.medium-11
-          .margin-left-sm
-            h4.t-purple inspec-bin
-            p Moved the `inspec` executable to a separate gem, `inspec-bin`. This allows the use of the `inspec` gem as a library without the licensing restrictions placed on the executable.
-            p This release is the first to require accepting a license before using it as an executable.
-      .margin-top-xs
-        a#expandBtn Show all new features
+      h3.large-11.medium-11 Learn Chef Rally Road Trip: Driving Compliance
+      p.large-11.medium-11 Join Chef experts for a hands-on workshop to learn how you can deliver software that is secure and compliant by design. Coming to 12 cities in September and October.
+      a href="https://www.chef.io/roadtrip/" Register Now
+
+
   /!  canvas elements
   #particles-js.particles
    canvas.particles-js-canvas-el /
