--- a/.expeditor/templates/pull_request.mustache
+++ b/.expeditor/templates/pull_request.mustache
@@ -1,7 +1,8 @@
 Hello {{author}}! Thanks for the pull request!
 
 Here is what will happen next:
-1. Your PR will be reviewed by the maintainers
+
+1. Your PR will be reviewed by the maintainers.
 2. If everything looks good, one of them will approve it, and your PR will be merged.
 
 Thank you for contributing!
