--- a/docs/resources/sys_info.md.erb
+++ b/docs/resources/sys_info.md.erb
@@ -41,6 +41,24 @@ The following examples show how to use this Chef InSpec audit resource.
 
 <br>
 
+### Compare content to hostname
+
+    describe file('/path/to/some/file') do
+      its('content') { should match sys_info.hostname }
+    end
+
+<br>
+
+Options can be passed as arguments to hostname as well.
+
+    describe file('/path/to/some/file') do
+      its('content') { should match sys_info.hostname('full') }
+    end
+
+<br>
+
+Currently supported arguments to `hostname` on Linux platforms are 'full'|'f'|'fqdn'|'long', 'domain'|'d', 'ip_address'|'i', and 'short'|'s'. Mac currently supports 'full'|'f'|'fqdn'|'long' and 'short'|'s'
+
 ## Matchers
 
 For a full list of available matchers, please visit our [matchers page](https://www.inspec.io/docs/reference/matchers/).
