--- a/docs/resources/user.md.erb
+++ b/docs/resources/user.md.erb
@@ -34,13 +34,16 @@ A `user` resource block declares a user name, and then one (or more) matchers:
       its('mindays') { should eq 0 }
       its('maxdays') { should eq 90 }
       its('warndays') { should eq 8 }
+      its('passwordage') { should eq 355 }
+      its('maxbadpasswords') { should eq nil } // Only valid on Windows OS
+      its('badpasswordattempts') { should eq 0 }
     end
 
 where
 
 * `('root')` is the user to be tested
 * `it { should exist }` tests if the user exists
-* `gid`, `group`, `groups`, `home`, `maxdays`, `mindays`, `shell`, `uid`, and `warndays` are valid matchers for this resource
+* `gid`, `group`, `groups`, `home`, `maxdays`, `mindays`, `shell`, `uid`, `warndays`´, `passwordage`, `maxbadpasswords` and `badpasswordattempts` are valid matchers for this resource
 
 <br>
 
@@ -90,6 +93,7 @@ The `gid` matcher tests the group identifier:
     its('gid') { should eq 1234 }
 
 where `1234` represents the user identifier.
+The `gid` option is only available on Linux and will return `nil` for Windows os.
 
 ### group
 
@@ -98,6 +102,7 @@ The `group` matcher tests the group to which the user belongs:
     its('group') { should eq 'root' }
 
 where `root` represents the group.
+The `group` option is only available on Linux and will return `nil` for Windows os.
 
 ### groups
 
@@ -148,3 +153,29 @@ The `warndays` matcher tests the number of days a user is warned before a passwo
     its('warndays') { should eq 5 }
 
 where `5` represents the number of days a user is warned.
+
+### passwordage
+
+The `passwordage` matcher tests the number of days a user changed its password:
+
+    its('passwordage') { should_be <= 365 }
+
+where `365` represents the number of days since the last password change.
+
+### maxbadpasswords
+
+The `maxbadpasswords` matcher tests the count of max badpassword settings for a specific user.
+
+    its('maxbadpasswords') { should eq 7 }
+    
+where `7` is the count of maximum bad password attempts.
+
+### badpasswordattempts
+
+The `badpasswordattempts` matcher tests the count of bad password attempts for a user.
+
+    its('badpasswordattempts') { should eq 0 }
+   
+where `0` is the count of bad passwords for a user. 
+On Linux based operating systems it relies on `lastb` and for Windows it uses information stored for the user object.
+These settings will be resetted to `0` depending on your operating system configuration.
