--- a/docs/resources/users.md.erb
+++ b/docs/resources/users.md.erb
@@ -31,7 +31,7 @@ A `users` resource block declares a user name, and then one (or more) matchers:
 
 where
 
-* `gid`, `group`, `groups`, `home`, `maxdays`, `mindays`, `shell`, `uid`, and `warndays` are valid matchers for this resource
+* `gid`, `group`, `groups`, `home`, `maxdays`, `mindays`, `shell`, `uid`, `warndays`, `passwordage`, `maxbadpasswords` and `badpasswordattempts` are valid matchers for this resource
 * `where(uid: 0).entries` represents a filter that runs the test only against matching users
 
 For example:
@@ -149,3 +149,29 @@ The `warndays` matcher tests the number of days a user is warned before a passwo
     its('warndays') { should eq 5 }
 
 where `5` represents the number of days a user is warned.
+
+### passwordage
+
+The `passwordage` matcher tests the number of days a user changed its password:
+
+    its('passwordage') { should_be <= 365 }
+
+where `365` represents the number of days since the last password change.
+
+### maxbadpasswords
+
+The `maxbadpasswords` matcher tests the count of max badpassword settings for a specific user.
+
+    its('maxbadpasswords') { should eq 7 }
+    
+where `7` is the count of maximum bad password attempts.
+
+### badpasswordattempts
+
+The `badpasswordattempts` matcher tests the count of bad password attempts for a user.
+
+    its('badpasswordattempts') { should eq 0 }
+   
+where `0` is the count of bad passwords for a user. 
+On Linux based operating systems it relies on `lastb` and for Windows it uses information stored for the user object.
+These settings will be resetted to `0` depending on your operating system configuration.
