Removes broken search button and icon
Signed-off-by: kagarmoe <kgarmoe@chef.io>

--- a/www/source/layouts/docs.slim
+++ b/www/source/layouts/docs.slim
@@ -6,9 +6,7 @@
       .columns.large-12.medium-12.z-20
         .flex.align.margin-both
           form.main-sidebar--search.shadow-dark action="/docs/search/" method="get"
-            input.st-default-search-input type="text" placeholder="Search documentation..." name="q"
-            button.search.shadow-dark.margin-left-xs action="/docs/search/" method="get"
-            i.fa.fa-search.t-white
+            input.st-default-search-input type="search" placeholder="Search documentation..." name="q"
     #particles-second
      canvas.particles-js-canvas-el /
 
