Remove .html to fix install link
Signed-off-by: Mary Jinglewski <mjinglewski@chef.io>

--- a/www/source/index.html.slim
+++ b/www/source/index.html.slim
@@ -14,7 +14,7 @@ header.bg-gradient.margin-top-offset.short-bg.relative
         h3.t-white Turn your compliance, security, and other policy requirements into automated tests.
         /! buttons
         .row.align.columns.margin-top-sm.mobile-row-btn
-          a.button.btn-lg.btn-purple.shadow-dark.margin-right-xs.mobile-row-btn href="/docs/reference/install.html"
+          a.button.btn-lg.btn-purple.shadow-dark.margin-right-xs.mobile-row-btn href="/docs/reference/install"
             i.fa.fa-cloud-download
             span download inspec 4
           a.button.btn-lg.btn-white-o.shadow-dark.mobile-row-btn href="/tutorials" browse tutorials
