--- a/www/source/layouts/_nav.slim
+++ b/www/source/layouts/_nav.slim
@@ -22,6 +22,6 @@ nav#main-nav.shadow
           i.fa.fa-github
           span.main-nav--link-text Github
       li.nav-cta
-        a.button.btn-sm.btn-purple href="/docs/reference/install.html"
+        a.button.btn-sm.btn-purple href="/docs/reference/install"
           i.fa.fa-cloud-download
           | Download
