--- a/lib/plugins/inspec-reporter-html2/templates/profile.html.erb
+++ b/lib/plugins/inspec-reporter-html2/templates/profile.html.erb
@@ -7,8 +7,8 @@
     <% if profile.summary %>
     <tr class="profile-summary"><th>Summary:</th><td><%= profile.summary %></td></tr>
     <% end %>
-    <% if profile.skip_message %>
-    <tr class="profile-skip-message"><th>Skip Message:</th><td><%= profile.skip_message %></td></tr>
+    <% if profile.status_message %>
+    <tr class="profile-status-message"><th>Status Message:</th><td><%= profile.status_message %></td></tr>
     <% end %>
   </table>
 
