--- a/lib/plugins/inspec-reporter-html2/templates/profile.html.erb
+++ b/lib/plugins/inspec-reporter-html2/templates/profile.html.erb
@@ -7,7 +7,10 @@
     <% if profile.summary %>
     <tr class="profile-summary"><th>Summary:</th><td><%= profile.summary %></td></tr>
     <% end %>
-    <% if profile.status_message %>
+    <% if profile.status != "loaded" %>
+    <tr class="profile-status"><th>Status:</th><td><%= profile.status %></td></tr>
+    <% end %>
+    <% if profile.status_message && !profile.status_message.empty? %>
     <tr class="profile-status-message"><th>Status Message:</th><td><%= profile.status_message %></td></tr>
     <% end %>
   </table>
