Update inspec init plugin: 1. To use double quotes as per chefstyle 2. Template files renamed to .erb
Signed-off-by: Vasu1105 <vasundhara.jagdale@chef.io>

--- a/lib/plugins/inspec-init/templates/plugins/inspec-plugin-template/lib/inspec-plugin-template/plugin.erb
+++ b/lib/plugins/inspec-init/templates/plugins/inspec-plugin-template/lib/inspec-plugin-template/plugin.erb
@@ -7,13 +7,13 @@
 # fast and light by only loading heavy things when they are needed.
 
 # Presumably this is light
-require '<%= plugin_name %>/version'
+require "<%= plugin_name %>/version"
 
 # The InspecPlugins namespace is where all plugins should declare themselves.
-# The 'Inspec' capitalization is used throughout the InSpec source code; yes, it's
+# The "Inspec" capitalization is used throughout the InSpec source code; yes, it's
 # strange.
 module InspecPlugins
-  # Pick a reasonable namespace here for your plugin.  A reasonable choice
+  # Pick a reasonable namespace here for your plugin. A reasonable choice
   # would be the CamelCase version of your plugin gem name.
   # <%= plugin_name %> => <%= module_name %>
   module <%= module_name %>
@@ -26,7 +26,7 @@ module InspecPlugins
     # major versions.
     class Plugin < ::Inspec.plugin(2)
       # Internal machine name of the plugin. InSpec will use this in errors, etc.
-      plugin_name :'<%= plugin_name %>'
+      plugin_name :"<%= plugin_name %>"
 
       <% if hooks[:cli_command] %>
       # Define a new CLI subcommand.
@@ -43,7 +43,7 @@ module InspecPlugins
         # functionality.
         # For example, InSpec will activate this hook when `inspec help` is
         # executed, so that this plugin's usage message will be included in the help.
-        require '<%= plugin_name %>/cli_command'
+        require "<%= plugin_name %>/cli_command"
 
         # Having loaded our functionality, return a class that will let the
         # CLI engine tap into it.
@@ -59,7 +59,7 @@ module InspecPlugins
         # Calling this hook doesn't mean the reporter is being executed - just
         # that we should be ready to do so. So, load the file that defines the
         # functionality.
-        require '<%= plugin_name %>/reporter'
+        require "<%= plugin_name %>/reporter"
 
         # Having loaded our functionality, return a class that will let the
         # reporting engine tap into it.
