--- a/lib/plugins/inspec-init/templates/plugins/inspec-plugin-template/lib/inspec-plugin-template/version.erb
+++ b/lib/plugins/inspec-init/templates/plugins/inspec-plugin-template/lib/inspec-plugin-template/version.erb
@@ -3,6 +3,6 @@
 # to learn the current version.
 module InspecPlugins
   module <%= module_name %>
-    VERSION = '0.1.0'.freeze
+    VERSION = "0.1.0".freeze
   end
 end
