--- a/lib/plugins/inspec-init/templates/plugins/inspec-plugin-template/lib/inspec-plugin-template/cli_command.erb
+++ b/lib/plugins/inspec-init/templates/plugins/inspec-plugin-template/lib/inspec-plugin-template/cli_command.erb
@@ -1,4 +1,4 @@
-require 'inspec/resource'
+require "inspec/resource"
 
 module InspecPlugins::<%= module_name %>
   # This class will provide the actual CLI implementation.
@@ -21,31 +21,31 @@ module InspecPlugins::<%= module_name %>
     # Note: if you want your command (or subcommand) to have dashes in it,
     # use underscores where you want a dash, and Thor will convert them.
     # Thor will fail to find a command that is directly named with dashes.
-    subcommand_desc '<%= command_name_snake %> [COMMAND]', 'Your Usage Message Here'
+    subcommand_desc "<%= command_name_snake %> [COMMAND]", "Your Usage Message Here"
 
     # The usual rhythm for a Thor CLI file is description, options, command method.
     # Thor just has you call DSL methods in sequence prior to each command.
 
     # Let's make a command, 'do_something'. This will then be available
-    # as `inspec <%= command_name_dashes %> do-something
+    # as `inspec <%= command_name_dashes %> do-something`
     # (Change this method name to be something sensible for your plugin.)
 
     # First, provide a usage / description. This will appear
     # in `inspec help <%= command_name_dashes %>`.
     # As this is a usage message, you should write the command as it should appear
     # to the user (if you want it to have dashes, use dashes)
-    desc 'do-something WHAT [OPTIONS]', 'Does something'
+    desc "do-something WHAT [OPTIONS]", "Does something"
 
     # Let's include an option, -s, to summarize
     # Refer to the Thors docs; there is a lot you can do here.
-    option :summary, desc: 'Include a total at the bottom', \
+    option :summary, desc: "Include a total at the bottom", \
                      type: :boolean, default: true, aliases: [:s]
 
-    # OK, now the actual method itself.  If you provide params, you're telling Thor that
+    # OK, now the actual method itself. If you provide params, you're telling Thor that
     # you accept CLI arguments after all options have been consumed.
     # Note again that the method name has an underscore, but when invoked
     # on the CLI, use a dash.
-    def do_something(what = 'nothing')
+    def do_something(what = "nothing")
       # The code here will *only* be executed if someone actually
       # runs `inspec <%= command_name_dashes %> do-something`.
 
@@ -55,7 +55,7 @@ module InspecPlugins::<%= module_name %>
       # Talk to the user using the `ui` object (see Inspec::UI)
       # ui.error('Whoops!')
 
-      ui.warning('This is a generated plugin with a default implementation.  Edit lib/<%= plugin_name %>/cli_command.rb to make it do what you want.')
+      ui.warning("This is a generated plugin with a default implementation.  Edit lib/<%= plugin_name %>/cli_command.rb to make it do what you want.")
       ui.exit(:success) # or :usage_error
     end
   end
