Update inspec init plugin to deprecate --hook option and replace it with --activators. Make alias for backword compatibility
Signed-off-by: Vasu1105 <vasundhara.jagdale@chef.io>

--- a/lib/plugins/inspec-init/templates/plugins/inspec-plugin-template/test/unit/plugin_def_test.erb
+++ b/lib/plugins/inspec-init/templates/plugins/inspec-plugin-template/test/unit/plugin_def_test.erb
@@ -43,9 +43,9 @@ describe InspecPlugins::<%= module_name %>::Plugin do
     status.api_generation.must_equal(2)
   end
 
-  # Plugins can support several different activator hooks, each of which has a type.
+  # Plugins can support several different activator, each of which has a type.
   # Since this is (primarily) a CliCommand plugin, we'd expect to see that among our types.
-  it "should include a cli_command activator hook" do
+  it "should include a cli_command activator" do
     status.plugin_types.must_include(:cli_command)
   end
 end
