--- a/lib/plugins/inspec-init/templates/plugins/inspec-plugin-template/lib/inspec-plugin-template/plugin.erb
+++ b/lib/plugins/inspec-init/templates/plugins/inspec-plugin-template/lib/inspec-plugin-template/plugin.erb
@@ -1,6 +1,6 @@
 # Plugin Definition file
 # The purpose of this file is to declare to InSpec what plugin_types (capabilities)
-# are included in this plugin, and provide hooks that will load them as needed.
+# are included in this plugin, and provide activator that will load them as needed.
 
 # It is important that this file load successfully and *quickly*.
 # Your plugin's functionality may never be used on this InSpec run; so we keep things
@@ -20,7 +20,7 @@ module InspecPlugins
     # This simple class handles the plugin definition, so calling it simply Plugin is OK.
     #   Inspec.plugin returns various Classes, intended to be superclasses for various
     # plugin components. Here, the one-arg form gives you the Plugin Definition superclass,
-    # which mainly gives you access to the hook / plugin_type DSL.
+    # which mainly gives you access to the activator / plugin_type DSL.
     #   The number '2' says you are asking for version 2 of the plugin API. If there are
     # future versions, InSpec promises plugin API v2 will work for at least two more InSpec
     # major versions.
@@ -28,20 +28,20 @@ module InspecPlugins
       # Internal machine name of the plugin. InSpec will use this in errors, etc.
       plugin_name :"<%= plugin_name %>"
 
-      <% if hooks[:cli_command] %>
+      <% if activator[:cli_command] %>
       # Define a new CLI subcommand.
       # The argument here will be used to match against the command line args,
-      # and if the user said `inspec list-resources`, this hook will get called.
-      # Notice that you can define multiple hooks with different names, and they
+      # and if the user said `inspec list-resources`, this activator will get called.
+      # Notice that you can define multiple activator with different names, and they
       # don't have to match the plugin name.
 
       # We'd like this to be list-resources, but Thor does not support hyphens
       # see https://github.com/erikhuda/thor/pull/613
       cli_command :<%= command_name_snake %> do
-        # Calling this hook doesn't mean the subcommand is being executed - just
+        # Calling this activator doesn't mean the subcommand is being executed - just
         # that we should be ready to do so. So, load the file that defines the
         # functionality.
-        # For example, InSpec will activate this hook when `inspec help` is
+        # For example, InSpec will activate this activator when `inspec help` is
         # executed, so that this plugin's usage message will be included in the help.
         require "<%= plugin_name %>/cli_command"
 
@@ -51,12 +51,12 @@ module InspecPlugins
       end
       <% end %>
 
-      <% if hooks[:reporter] %>
+      <% if activator[:reporter] %>
       # Define a new Reporter.
       # The argument here will be used to match against the CLI --reporter option.
       # `--reporter <%= reporter_name_snake %>` will load your reporter and call its renderer.
       reporter :<%= reporter_name_snake %> do
-        # Calling this hook doesn't mean the reporter is being executed - just
+        # Calling this activator doesn't mean the reporter is being executed - just
         # that we should be ready to do so. So, load the file that defines the
         # functionality.
         require "<%= plugin_name %>/reporter"
